# Sport-Video-Analysis

./: CMakeLists.txt  README.md
include/: BallDetection.h  header.h
src/: BallDetection.cpp  TableDetection.cpp  findCenters.cpp  main.cpp
